# robotevents-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  lib.rs
src/filters/: event.rs  mod.rs  season.rs  team.rs
src/query/: event.rs  mod.rs  season.rs  team.rs
src/schema/: award.rs  event.rs  location.rs  matches.rs  mod.rs  program.rs  ranking.rs  season.rs  skill.rs  team.rs
