[package]
name = "robotevents"
description = "Wrapper for the RobotEvents.com v2 API."
repository = "https://github.com/LemLib/robotevents-rs/"
license-file = "LICENSE.md"
readme = "README.md"
version = "0.5.0"
edition = "2021"
authors = ["tropix126", "BattleCh1cken"]
categories = [
  "science::robotics",
  "api-bindings",
  "web-programming::http-client",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
itertools = "0.12.0"
futures = "0.3.31"
futures-timer = "3.0.3"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
