[package]
name = "robotevents"
description = "Wrapper for the RobotEvents.com v2 API."
repository = "https://github.com/LemLib/robotevents-rs/"
license-file = "LICENSE.md"
readme = "README.md"
version = "0.6.0"
edition = "2021"
authors = ["tropix126", "BattleCh1cken"]
categories = [
  "science::robotics",
  "api-bindings",
  "web-programming::http-client",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
itertools = "0.12.0"
futures = "0.3.31"
futures-timer = "3.0.3"
thiserror = "2.0.9"
fake = { version = "3.0.1", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }

[features]
fake = ["dep:fake", "dep:rand"]
