[package]
name = "robotevents"
description = "Wrapper for the RobotEvents.com v2 API."
repository = "https://github.com/LemLib/robotevents-rs/"
license-file = "LICENSE.md"
readme = "README.md"
version = "0.6.0"
edition = "2021"
authors = ["tropix126", "BattleCh1cken"]
categories = [
  "science::robotics",
  "api-bindings",
  "web-programming::http-client",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"], optional = true }
itertools = {version = "0.12.0", optional = true }
futures = {version = "0.3.31", optional = true}
futures-timer = {version = "3.0.3", optional = true}
thiserror = {version = "2.0.9", optional = true}
fake = { version = "3.0.1", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }

[features]
fake = ["dep:fake", "dep:rand", "dep:itertools"]
client = [ "dep:reqwest", "dep:futures", "dep:futures-timer", "dep:thiserror", "dep:itertools" ]
default = [ "client" ]
all = ["client", "fake"]
